# fosssy

./: CMakeLists.txt  README.md  a.out  build.sh  main  main.c  test.fosy
include/: stdio.h  stdlib.h
include/fosssyc/: context.h  source.h
include/fosssyc/c/: token.h
lib/: CMakeLists.txt  context.c
src/: driver.c
test/: test.c
